close #121 create the stories site with liquid

--- a/_stories/2019-03-09-story-test-2.md
+++ b/_stories/2019-03-09-story-test-2.md
@@ -2,7 +2,7 @@
 title: Story234
 author: Caroline
 tags: [git, docker, agile, LEAN, prolike, jobs, liquid, benjamin]
-image: kanin2.jpg
+image: ../img/stories/kanin2.jpg
 published: true
 description: A short, one line description of your story.
 ---
