--- a/_stories/2019-03-10-story2.md
+++ b/_stories/2019-03-10-story2.md
@@ -2,7 +2,7 @@
 title: Story2
 author: Caroline
 tags: [git, docker, agile, LEAN, prolike, jobs, liquid, benjamin]
-image: kanin3.jpg
+image: ../img/stories/kanin3.jpg
 published: true
 description: A short, one line description of your story.
 ---
