--- a/_stories/2019-03-12-story1.md
+++ b/_stories/2019-03-12-story1.md
@@ -2,7 +2,7 @@
 title: Story1
 author: Caroline - prolike
 tags: [git, docker, agile, LEAN, prolike, jobs, liquid, laura]
-image: kanin5.jpg
+image: ../img/stories/kanin5.jpg
 published: true
 description: A short, one line description of your story.
 ---
