close #145 make the tags in posts separated

--- a/_stories/2019-03-10-story2.md
+++ b/_stories/2019-03-10-story2.md
@@ -1,7 +1,7 @@
 ---
 title: Story2
 author: Caroline
-tags: [git, docker, agile, LEAN, prolike, jobs, liquid, benjamin]
+tags: [git, docker, agile ]
 image: ../img/stories/kanin3.jpg
 published: true
 description: A short, one line description of your story.
