--- a/_stories/2019-03-12-story1.md
+++ b/_stories/2019-03-12-story1.md
@@ -1,7 +1,7 @@
 ---
 title: Story1
 author: Caroline - prolike
-tags: [git, docker, agile, LEAN, prolike, jobs, liquid, laura]
+tags: [git]
 image: ../img/stories/kanin5.jpg
 published: true
 description: A short, one line description of your story.
