close #151 make header banner with story images

--- a/_stories/2019-03-12-story1.md
+++ b/_stories/2019-03-12-story1.md
@@ -9,6 +9,7 @@ description: A short, one line description of your story.
 
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur adipiscing elit duis tristique sollicitudin nibh. Fringilla est ullamcorper eget nulla. Blandit aliquam etiam erat velit scelerisque in. A iaculis at erat pellentesque adipiscing commodo elit at imperdiet.
+{: .kicker}
 
 ## iojojasojda
 
