--- a/_stories/2019-03-09-story-test-2.md
+++ b/_stories/2019-03-09-story-test-2.md
@@ -3,7 +3,7 @@ title: Story234
 author: Caroline
 tags: [git, docker, agile ]
 image: ../img/stories/kanin2.jpg
-published: true
+published: false
 description: A short, one line description of your story.
 ---
 
