--- a/_stories/2019-03-10-story2.md
+++ b/_stories/2019-03-10-story2.md
@@ -3,7 +3,7 @@ title: Story2
 author: Caroline
 tags: [git, docker, agile ]
 image: ../img/stories/kanin3.jpg
-published: true
+published: false
 description: A short, one line description of your story.
 ---
 
