close #159 make zenhub story

--- a/_stories/2019-03-18-zenhub.md
+++ b/_stories/2019-03-18-zenhub.md
@@ -47,10 +47,10 @@ We will translate the new complextity to ideal-working-hours. (E.g. how "long ti
 
 So essentially we will stop using our own T-shirt size labels and use the built in story points instead, translating the semantics as follows:
 
-**Small**: 1-2 story points
-**Medium**: 3-5 story points
-**Large**: 8 story points
-**Too large**: 13 or higher
+**Small**: 1-2 story points.
+**Medium**: 3-5 story points.
+**Large**: 8 story points.
+**Too large**: 13 or higher.
 
 ### Briefings becomes Epcis
 ZenHub has built in support for Epics, which essentially are Container issues. It seems to work quite well, and comepletely replases our need for "Briefings".
