--- a/_stories/2019-03-18-zenhub.md
+++ b/_stories/2019-03-18-zenhub.md
@@ -3,6 +3,7 @@ title: Zenhub
 author: Lakruzz
 image: ../img/stories/zenhub.jpg
 published: true
+tags: [github, migrate]
 description: Waffle.io is shutting down, we're moving to ZenHub.
 ---
 
