close #169 implement vue and start working with it

--- a/_posts/2019-03-09-story-test-2.md
+++ b/_posts/2019-03-09-story-test-2.md
@@ -1,9 +1,9 @@
 ---
-title: Story2
+title: Story234
 author: Caroline
-tags: [benjamin, woop, LEAN]
-image: ../img/stories/kanin1.jpg
-published: false
+tags: [git, docker, agile ]
+image: ../img/stories/kanin2.jpg
+published: true
 description: A short, one line description of your story.
 ---
 
