--- a/_posts/2019-03-10-story2.md
+++ b/_posts/2019-03-10-story2.md
@@ -3,7 +3,7 @@ title: Story2
 author: Caroline
 tags: [git, docker, agile ]
 image: ../img/stories/kanin3.jpg
-published: false
+published: true
 description: A short, one line description of your story.
 ---
 
