--- a/_posts/2019-03-12-story1.md
+++ b/_posts/2019-03-12-story1.md
@@ -3,7 +3,7 @@ title: Story1
 author: Caroline - prolike
 tags: [git]
 image: ../img/stories/kanin5.jpg
-published: false
+published: true
 description: A short, one line description of your story.
 ---
 
