--- a/_posts/2019-03-18-zenhub.md
+++ b/_posts/2019-03-18-zenhub.md
@@ -12,7 +12,7 @@ Waffle.io is shutting down, we're moving to ZenHub. Zenhub has the advantage tha
 
 ## Get Started
 1. Install the [Chrome extension for zenHub](https://chrome.google.com/webstore/detail/zenhub-for-github/ogcgkffhplmphkaahpmffcafajaocjbd)
-2. Browse to one of your repositories (e.g [prolike/prolike.io#zenhub](https://github.com/prolike/prolike.io#))
+2. Browse to one of your repositories (e.g [prolike/prolike.io#zenhub](https://github.com/prolike/prolike.io#zenhub){: target="_blank"})
 3. Autorize the ZenHub app for both public and private repos.
 
 ## First time use
@@ -22,17 +22,17 @@ Quite similar to [Waffle.io](https://waffle.io/)
 3. **Connect repos** - pull in the ones that belongs to the workspace
 
 ## Define the columns
-ZenHub referes to the columns in the Kanban as pipelines. The predefined pipelines are **New issues  -> Icebox -> Backlog  -> In progress -> Review/QA -> Done ->** ***Closed.***
+ZenHub referes to the columns in the Kanban as pipelines. The predefined pipelines are `New issues  -> Icebox -> Backlog  -> In progress -> Review/QA -> Done -> Closed.`
 
-Of all these, ***Closed*** is the only one that is required (default available).
+Of all these, `Closed` is the only one that is required (default available).
 
 The rationale behind this flow is described here at [ZenHub's help page](https://help.zenhub.com/support/solutions/articles/43000010339).
 
 In [Waffle.io](https://waffle.io/) the card's journey through the columns was defined by labels. ZenHub uses it's own internally maintained metadata. So to model the Phlow in ZenHub you don't need to define any labels, just simply rearrange and rename the columns (pipelines) to read.
 
-**New issues -> Backlog -> Up next -> To do -> In progress ->** ***Closed***
+`New issues -> Backlog -> Up next -> To do -> In progress -> Closed`
 
-The **New issues** pipeline was not part of the line up in Waffle.io, but it's definitely an improvement, it makes the project's in box is visible, so we'll keep it and embrace it.
+The *New issues* pipeline was not part of the line up in Waffle.io, but it's definitely an improvement, it makes the project's in box is visible, so we'll keep it and embrace it.
 
 ### Priorities
 ZenHub doesn't define it's own priorities, so we will just continue to use our own labels for this.
@@ -44,7 +44,7 @@ ZenHub has it's own built-in approach to estimates, it's based on complexity or 
 
 And since ZenHub is not hosted on it's own URL like [Waffle.io](https://waffle.io/) was, but instead it's made availabel through an extension of the GUI on GitHub it feels intuitive. We'll go with this.
 
-We will translate the new complextity to ideal-working-hours. (E.g. how "long time would it take, if we gave the issue to a developer who had all the necessary competences, and could work the issue without interruptions ountil done"). 
+We will translate the new complextity to ideal-working-hours. (E.g. how "long time would it take, if we gave the issue to a developer who had all the necessary competences, and could work the issue without interruptions until done"). 
 
 So essentially we will stop using our own T-shirt size labels and use the built in story points instead, translating the semantics as follows:
 
@@ -59,7 +59,7 @@ ZenHub has built in support for Epics, which essentially are Container issues. I
 ### Dependencies, release, reporting etc
 There are actually a few more features such as blocking dependencies and modelling releases that seems useful, and ZenHub also encourages the use of Milestones, since they play a central role in the quite useful predefined reports. We can examine this further down the process...
 
-Bulk upgrades (MANUAL work ahead!)
+## Bulk upgrades (MANUAL work ahead!)
 We could probably build a small too to make the transition from [Waffle.io](https://waffle.io/) to ZenHub here's the **MANUAL** process I've been using for the few projects I've migrated so far. It starts, after you have defined the workspace collection and the pipelines...
 
 **Before we start...** a word on selction and bulk actions: You can click one of the issues on the icon of the assignee, this will enter into  selection mode, click on any other issue to add to selections. While in selection mode, an array of bulk actions becomes available as push buttons over the board. Do Your Thing.
@@ -67,23 +67,23 @@ We could probably build a small too to make the transition from [Waffle.io](http
 The process is really a repetition over almost the same cycle:
 
 #### Pipelines (columns)
-* Use a filter to see the issues with **(status - *)**  one at a time
+* Use a filter to see the issues with `status - *`  one at a time
 * Select all the issues and do a bulk action to move the to the corresponding pipeline, or simply drag them there one by one. 
 * Clear the filter and start over
 
 Consider deleting the status labels  previously used in the Phlow - to force yourself out of Waffle today - rather than in two months.
 
 #### Estimates
-* Use a filter to see the issues with **(size - *)** one at a time
+* Use a filter to see the issues with `size - *` one at a time
 * Select all the issues and do a bulk action to set the corresponding story point estimate. 
 * Clear the filter and start over
 
 #### Move all from "New Issues" to "Backlog"
-Since the use of **New Issues** is new to us, but default to ZenHub,  we need to move all issues from **New Issues** to **Backlog**
+Since the use of *New Issues* is new to us, but default to ZenHub,  we need to move all issues from *New Issues* to *Backlog*
 
 #### Briefings
 * Use a filter to see the issues with briefing one at a time
-* In the right menu select the **Epic** item and then ***convert to Epic***
+* In the right menu select the `Epic` item and then `convert to Epic`
 * Make a note of each isses that is mentioned throughoput the log of the Briefing issues and for each of them
   * Open the issue
   * Use the Epic menu item to add the individuial issue to the epic.
