--- a/_posts/2019-03-18-zenhub.md
+++ b/_posts/2019-03-18-zenhub.md
@@ -11,7 +11,7 @@ Waffle.io is shutting down, we're moving to ZenHub. Zenhub has the advantage tha
 {: .kicker}
 
 ## Get Started
-1. Install the [Chrome extension for zenHub](https://chrome.google.com/webstore/detail/zenhub-for-github/ogcgkffhplmphkaahpmffcafajaocjbd)
+1. Install the [Browser extension for ZenHub](https://www.zenhub.com/extension){: target="_blank"} (Availabel for Chrome and Firefox).
 2. Browse to one of your repositories (e.g [prolike/prolike.io#zenhub](https://github.com/prolike/prolike.io#zenhub){: target="_blank"})
 3. Autorize the ZenHub app for both public and private repos.
 
@@ -44,7 +44,7 @@ ZenHub has it's own built-in approach to estimates, it's based on complexity or 
 
 And since ZenHub is not hosted on it's own URL like [Waffle.io](https://waffle.io/) was, but instead it's made availabel through an extension of the GUI on GitHub it feels intuitive. We'll go with this.
 
-We will translate the new complextity to ideal-working-hours. (E.g. how "long time would it take, if we gave the issue to a developer who had all the necessary competences, and could work the issue without interruptions until done"). 
+We will translate the new complextity to ideal-working-hours. (E.g. how "long time would it take, if we gave the issue to a developer who had all the necessary competences, and could work the issue without interruptions until done").
 
 So essentially we will stop using our own T-shirt size labels and use the built in story points instead, translating the semantics as follows:
 
@@ -68,14 +68,14 @@ The process is really a repetition over almost the same cycle:
 
 #### Pipelines (columns)
 * Use a filter to see the issues with `status - *`  one at a time
-* Select all the issues and do a bulk action to move the to the corresponding pipeline, or simply drag them there one by one. 
+* Select all the issues and do a bulk action to move the to the corresponding pipeline, or simply drag them there one by one.
 * Clear the filter and start over
 
 Consider deleting the status labels  previously used in the Phlow - to force yourself out of Waffle today - rather than in two months.
 
 #### Estimates
 * Use a filter to see the issues with `size - *` one at a time
-* Select all the issues and do a bulk action to set the corresponding story point estimate. 
+* Select all the issues and do a bulk action to set the corresponding story point estimate.
 * Clear the filter and start over
 
 #### Move all from "New Issues" to "Backlog"
@@ -93,4 +93,3 @@ Since the use of *New Issues* is new to us, but default to ZenHub,  we need to m
 *Rest In Peace Waffle*
 
 *Lars*
-
