--- a/_posts/2019-03-18-zenhub.md
+++ b/_posts/2019-03-18-zenhub.md
@@ -16,9 +16,9 @@ Waffle.io is shutting down, we're moving to ZenHub. Zenhub has the advantage tha
 3. Autorize the ZenHub app for both public and private repos.
 
 ## First time use
-Quite similar to [Waffle.io](https://waffle.io/)
-1. **Create a workspace name** - This is actually an improvement to [Waffle.io](https://waffle.io/) where one repo would be the *top-level* and the others would be *dragged* in. In ZenHub they are not parent-child relations but rather siblings in a joint workspace.
-2. **Add a description** - Also an extra feature compared to [Waffle.io](https://waffle.io/)
+Quite similar to **Waffle.io**
+1. **Create a workspace name** - This is actually an improvement to Waffle.io where one repo would be the *top-level* and the others would be *dragged* in. In ZenHub they are not parent-child relations but rather siblings in a joint workspace.
+2. **Add a description** - Also an extra feature compared to Waffle.io
 3. **Connect repos** - pull in the ones that belongs to the workspace
 
 ## Define the columns
@@ -26,9 +26,9 @@ ZenHub referes to the columns in the Kanban as pipelines. The predefined pipelin
 
 Of all these, `Closed` is the only one that is required (default available).
 
-The rationale behind this flow is described here at [ZenHub's help page](https://help.zenhub.com/support/solutions/articles/43000010339).
+The rationale behind this flow is described here at [ZenHub's help page](https://help.zenhub.com/support/home).
 
-In [Waffle.io](https://waffle.io/) the card's journey through the columns was defined by labels. ZenHub uses it's own internally maintained metadata. So to model the Phlow in ZenHub you don't need to define any labels, just simply rearrange and rename the columns (pipelines) to read.
+In Waffle.io the card's journey through the columns was defined by labels. ZenHub uses it's own internally maintained metadata. So to model the Phlow in ZenHub you don't need to define any labels, just simply rearrange and rename the columns (pipelines) to read.
 
 `New issues -> Backlog -> Up next -> To do -> In progress -> Closed`
 
@@ -40,9 +40,9 @@ ZenHub doesn't define it's own priorities, so we will just continue to use our o
 ### Estimates - T-shirt sizes becomes story points
 ZenHub has it's own built-in approach to estimates, it's based on complexity or story points and takes offset in the fibbonachi numbers 1 - 2 -3 - 5 - 8 -13 -21 and then ends with 40.
 
-[Waffle.io](https://waffle.io/) also had it's own internally implemented estimates, but we chose not to use them, because the we'ren't availabel outside the context of Waffle.io. In ZenHub it's acceptable since we can actually access this data on an [API](https://github.com/ZenHubIO/API) and we even have access to a few CLI tools [zhb](https://github.com/cou929/zhb), [zencli](https://github.com/eltorocorp/zencli) and maybe the most promising [zenhub-cli](https://github.com/hiredgun/zenhub-cli) which means that we can incoporate this in our automated Phlow.
+Waffle.io also had it's own internally implemented estimates, but we chose not to use them, because the we'ren't availabel outside the context of Waffle.io. In ZenHub it's acceptable since we can actually access this data on an [API](https://github.com/ZenHubIO/API) and we even have access to a few CLI tools [zhb](https://github.com/cou929/zhb), [zencli](https://github.com/eltorocorp/zencli) and maybe the most promising [zenhub-cli](https://github.com/hiredgun/zenhub-cli) which means that we can incoporate this in our automated Phlow.
 
-And since ZenHub is not hosted on it's own URL like [Waffle.io](https://waffle.io/) was, but instead it's made availabel through an extension of the GUI on GitHub it feels intuitive. We'll go with this.
+And since ZenHub is not hosted on it's own URL like Waffle.io was, but instead it's made availabel through an extension of the GUI on GitHub it feels intuitive. We'll go with this.
 
 We will translate the new complextity to ideal-working-hours. (E.g. how "long time would it take, if we gave the issue to a developer who had all the necessary competences, and could work the issue without interruptions until done").
 
@@ -60,7 +60,7 @@ ZenHub has built in support for Epics, which essentially are Container issues. I
 There are actually a few more features such as blocking dependencies and modelling releases that seems useful, and ZenHub also encourages the use of Milestones, since they play a central role in the quite useful predefined reports. We can examine this further down the process...
 
 ## Bulk upgrades (MANUAL work ahead!)
-We could probably build a small too to make the transition from [Waffle.io](https://waffle.io/) to ZenHub here's the **MANUAL** process I've been using for the few projects I've migrated so far. It starts, after you have defined the workspace collection and the pipelines...
+We could probably build a small too to make the transition from Waffle.io to ZenHub here's the **MANUAL** process I've been using for the few projects I've migrated so far. It starts, after you have defined the workspace collection and the pipelines...
 
 **Before we start...** a word on selction and bulk actions: You can click one of the issues on the icon of the assignee, this will enter into  selection mode, click on any other issue to add to selections. While in selection mode, an array of bulk actions becomes available as push buttons over the board. Do Your Thing.
 
