--- a/_posts/2019-03-18-zenhub.md
+++ b/_posts/2019-03-18-zenhub.md
@@ -1,7 +1,7 @@
 ---
 title: Zenhub
 author: Lakruzz
-image: ../img/stories/zenhub.jpg
+image: ../images/stories/zenhub.jpg
 published: true
 tags: [github, migrate]
 description: Waffle.io is shutting down, we're moving to ZenHub.
