close #247 write a blogpost about our 50k workflow

--- a/_posts/2019-10-07-use-prose.md
+++ b/_posts/2019-10-07-use-prose.md
@@ -1,7 +1,7 @@
 ---
 title: The use of Prose
-author: Caroline
-tags: [github, prose.io, markdown, jekyll]
+author: Carolineolivia
+tags: [github, prose.io, jekyll]
 image: /images/stories/prose.png
 published: true
 description: This will show you how to use the tool called Prose.io
@@ -62,5 +62,3 @@ In the box to the right you should write short about what you have changed.
 Then you click COMMIT
 
 #### There you go! Your content should be on the way to the website!
-
-
