--- a/_posts/2019-10-21-website.md
+++ b/_posts/2019-10-21-website.md
@@ -1,6 +1,6 @@
 ---
 title: 5k Website
-author: Caroline
+author: Carolineolivia
 tags: [products, services, html, css, jekyll]
 image: /images/stories/website.jpg
 published: true
