close #249 create page services

--- a/_posts/2019-10-21-software.md
+++ b/_posts/2019-10-21-software.md
@@ -5,6 +5,7 @@ tags: [software, services, products]
 description: Become a software owner
 author: Carolineolivia
 published: true
+icon: fas fa-cogs
 ---
 
 ### Wanna become a software owner?
