--- a/_posts/2019-10-21-website.md
+++ b/_posts/2019-10-21-website.md
@@ -1,13 +1,14 @@
 ---
-title: 5k Website
+title: Website
 author: Carolineolivia
 tags: [products, services, html, css, jekyll]
 image: /images/stories/website.jpg
 published: true
 description: We offer websites for 5.000 kr.
+icon: fas fa-hashtag
 ---
 
-Prolike has an offer of a 5.000 kr. website - if you choose a template.
+Prolike has an offer of a 5000 DKK website - if you choose a template.
 
 ## What does this offer include?
 
