close #250 create a form for websites

--- a/_posts/2019-10-21-website.md
+++ b/_posts/2019-10-21-website.md
@@ -55,4 +55,4 @@ Minimum virable product is the absolutly neccesary for your website to run. Our 
 
 [Learn more about the workflow!](/flow/)
 
-Wanna be our next costumer? [Contact us](/callme/) or even better, fill out [this form](/form/) to let us know a little bit about you and your website needs.
+Wanna be our next costumer? [Contact us](/callme/) or even better, fill out [this form](/website-form/) to let us know a little bit about you and your website needs.
