close #251 read through the new blogpost about software

--- a/_posts/2019-10-21-software.md
+++ b/_posts/2019-10-21-software.md
@@ -10,28 +10,34 @@ icon: fas fa-cogs
 
 ### Wanna become a software owner?
 
-At Prolike, we offer the lean way of programming. The lean way of developing the product you want. Starting with the absolutly nessacary, we program software that pleases your priorities of needs. We are here to make code come alive, we are here to produce your thougths and ideas. We build in the quality by using the lean concept, always improving.
+Here at Prolike we offer a lean way of programming; a lean way of developing exactly the product you want. We start by delivering you a software product that contains the bare minimum of a viable solution for your needs. We are here to make code come alive, we are here to produce your thougths and ideas. By utilizing the lean methodology, we ensure that we're constantly improving your product along with you.
 
 ### What does it take to be a software owner?
 
- Maybe it takes patience? The first thing to know about the deliveries from Prolike, is that they are never higher than 50.000 DDK. We never make more than 50.000 worth of software delivery at a time. 
+The first thing to know about software deliveries from Prolike is, that they are never higher than 50.000 DDK. We never make more than 50.000 worth of software delivery at a time. 
 
-### MVP - Minimum virable product
+<!-- Find på noget mere at sige Caroline :) -->
 
-MVP is the minumum version of the product you want. Maybe you have a lot of exciting ideas, and that is great! We love that! We'll collect all your thoughts in a workshop, and prio them together. What should come first? What do YOU need as a minimum? What do WE need as a minimum, to make your software come alive? MVP is also a delivery, therefore also a max of 50.000 DDK.
+### MVP - Minimum Viable Product
 
-**Feedback**
+The Minimum Viable (MVP) product we create together with you, is the simplest version of the product you want. Maybe you have a lot of exciting ideas, and that is great! We love that! We'll collect all your thoughts in a workshop, and prioritize them together with you - what should come first? What do YOU need as a minimum? What do WE need as a minimum, to make your software come alive? The Minimum Viable product (MVP) also functions as the first delivery ready for release, up to a limit of 50.000 DKK.
 
-MVP is also the way for us to quickly get a overview of the user scene. Who want to use the product? What do they think of the product? Is there a audience for the features we are producing?
+#### Gathering feedback
+
+Through the use of the Minimum Viable Product (MVP) we quickly get a feel for how your customers react to the piece of software we've created together. Who want to use the product? What do they think of the product? Is there a audience for the features we are producing?
+
+We analyze how the users interact with the piece of software, and from there we can delude if we need to make improvements or other major changes. This is also a chance for you to see if you get what you expected in the first place.
 
 ### When are we done?
 
-Actually we are never done! Software is never "done"! We continue to deliver - continue to improve. Next step after MVP is first delivery. We take the next row of priorities, and add them to the product.
+Actually, we are never done! Software is never "done"! We continue to deliver - continue to improve. Next step after delivering your Minimum Viable Product (MVP) is first delivery, or the first release of your piece of software. 
+
+From there, we wait and see if your Minimum Viable Product needs further improvements, slowly working our way to the next release if need be.
 
 ### Workshop
 
-We always begin with a workshop, containing minimum one Elder and two Yeepies - And you. We'll get all the facts straight, we'll write down your needs, wishes and thoughts. 
+We always begin with a workshop, where we find out how to best achieve a Minimum Viable Product (MVP) that best suits all of your needs -- This workshop will be held together with you, a Prolike Elder and two Yipees.
 
 Wanna know more? Learn about our workflow [here](/flow/)
 
-Do you wanna become a software owner? Fill out [this form](/form/) and make it easier for us to know about you and your software needs.
+Do you want become a software owner? Fill out [this form](/form/) and make it easier for us to know about you and your software needs.
