close #252 read through the blogpost about websites

--- a/_posts/2019-10-21-website.md
+++ b/_posts/2019-10-21-website.md
@@ -8,7 +8,7 @@ description: We offer websites for 5.000 kr.
 icon: fas fa-hashtag
 ---
 
-Prolike has an offer of a 5000 DKK website - if you choose a template.
+As something new, Prolike now provides template websites for 5000 DKK a piece.
 
 ## What does this offer include?
 
@@ -16,42 +16,42 @@ Well, let me take you through a journy of our website standards.
 
 ### Jekyll - static websites
 
-We'll be making the website with [Jekyll](https://jekyllrb.com). Jekyll is a simple, extendable, static site generator. We use markdown to write all texts and Jekyll will render your text in to a beautiful website.  Throughout that process you can tweak how you want the site URLs to look, what data gets displayed in the layout, and more.
+We'll be making the website with [Jekyll](https://jekyllrb.com). Jekyll is a simple, expandable, static site generator. We use [Markdown](https://www.markdownguide.org/) to write all text material for your website. Then Jekyll will proceed to render your text in to a beautiful website. Throughout this process you can tweak how you want the site URLs to look, what data gets displayed in the layout, and much much more.
 
 ![Website](/images/stories/jekyll-og.png "Our 5k website"){:.img-fluid}
 
 #### Collections - no database
 
-Instead of a database, Jekyll has collections, that contains a textfile (markdown), that gets rendered to a html page. A collection could be products, blogposts, courses and so on. Our website deal, contains one collection.
+Instead of a database, Jekyll has collections, which contains a text file (Markdown), that gets rendered to a HTML page. A collection could be products, blog posts, courses and so on. This specific website deal contains only one collection.
 
 #### Prose.io - Editing your content
 
-The deal includes Prose.io! A user friendly interface for editing your content (markdown files) on your website. This will make it easier to update your website like you want. We already have a [guide](/stories/use-prose/) showing you how to use it. We will insure that you can edit as musch text and content as possible, so you can start edit as soon the website is done. When you are done editing, we'll push the button and your website will be online!
+The deal includes [Prose.io](http://prose.io/#about)! A user friendly interface for editing your content (Markdown files) on your website. This will make it easier to update your website exactly like you want. We already have a [guide](/stories/use-prose/) showing you how to use it. We will ensure that you can edit as much text and content as possible, so you can start edit as soon the website is done. When you are done editing, we'll push the button and your website will be online!
 
 #### Design - Choose a Jekyll template
 
-When it comes to design - we'll make it easy for you. A thousand of templates is lying, ready on the web for you to choose one. We will implement it! See some of the templates [here](https://jekyllthemes.io/)
+When it comes to design - we'll make it easy for you. A thousand of templates is lying, ready on the web for you to choose one. See some of the templates [here](https://jekyllthemes.io/).
 
 ### Size - how many pages will i get?
 
-Including in our deal, you'll get two pages, besides the page of your collection and your frontpage.
+Included in our deal, you'll get two pages besides the page of your collection and your frontpage.
 
 ![Website](/images/stories/info-graphic-website.png "Our 5k website"){:.img-fluid}
 
-### Full responsive!
+### Full responsiveness!
 
-Of course your website will be full responsive, so it is compatible with ALL devices!
+Of course your website will be fully responsive, so it is compatible on ALL devices!
 
 ### Hosting - Github pages
 
-With jekyll and github pages you don't even need a server to host your website, or a webhotel. You just let us host your website on our Github **FOR FREE!** No monthly paying for some big corporation to let you have your site on some server.
+With Jekyll and Github pages you don't even need a server to host your website, or a traditional web hotel. You just let us host your website on our Github **FOR FREE!** No monthly payment for some big corporation to let you have your site on some server.
 
 ![Website](/images/stories/jekyll_ghpages.png "Our 5k website"){:.img-fluid}
 
 ### "Okay, that's fine, but i want a big, goldplated website!" - You might say!
 
-But hold on. Our deal is containing what we call a **MVP - Minimum virable product.**
-Minimum virable product is the absolutly neccesary for your website to run. Our goal is to get you online as fast as possible. And after the release, we can begin to see how the world repsonds to your website. We will use that information to develope and improve your website for our next delivery. So don't worry, you'll get your features, pages and gold, on the next part of your website journy.
+But hold on. Our deal also contains what we call a **MVP - Minimum Viable Product**.
+Minimum Viable Product (MVP) is the absolutly neccesary for your website to run. Our goal is to get you online as fast as possible. And after the first release of your piece of software, we can begin to see how the world repsonds to your website. We will use that information to develop and improve your website for our next delivery. So don't worry, you'll get your features, pages and gold, on the next part of your website journy.
 
 [Learn more about the workflow!](/flow/)
 
