--- a/_posts/2019-10-21-website.md
+++ b/_posts/2019-10-21-website.md
@@ -26,7 +26,7 @@ Instead of a database, Jekyll has collections, which contains a text file (Markd
 
 #### Prose.io - Editing your content
 
-The deal includes Prose.io! A user friendly interface for editing your content (Markdown files) on your website. This will make it easier to update your website exactly like you want. We already have a [guide](/stories/use-prose/) showing you how to use it. We will ensure that you can edit as much text and content as possible, so you can start edit as soon the website is done. When you are done editing, we'll push the button and your website will be online!
+The deal includes Prose.io! A user friendly interface for editing your content (Markdown files) on your website. This will make it easier to update your website exactly like you want. We already have a [guide](/anything/use-prose/) showing you how to use it. We will ensure that you can edit as much text and content as possible, so you can start edit as soon the website is done. When you are done editing, we'll push the button and your website will be online!
 
 #### Design - Choose a Jekyll template
 
