--- a/_posts/2019-10-07-use-prose.md
+++ b/_posts/2019-10-07-use-prose.md
@@ -4,38 +4,61 @@ author: Carolineolivia
 tags: [github, prose.io, jekyll]
 image: /images/stories/prose.png
 published: true
-description: This will show you how to use the tool called Prose.io
+description: Looking for a intuitive way to edit content on your website without being a developer?
 ---
 
 Hello! Today i'll show you how to edit your texts, image paths, titles etc. of your pages on your Jekyll site.
 
+<br>
+
 Then you might ask: "How will i do that without having all the knowlegde of how to set up, style and code like a webdeveloper?!"
 
-#### With prose.io of course!
+### With prose.io of course!
+
+<hr>
 
 Preparing:
+
+<br>
 
 - Make shure you have a github account (If not you can get one [here](https://github.com/join?source=header-home){: target="blank"})
 - Make shure your Github account have access to the jekyll site you want to edit (You don't need access if the site is on your github account, else contact the site repository owners)
 
-## Step 1 - Logging into Prose.io
+### Step 1 - Logging into Prose.io
+
+<hr>
 
 Go to [Prose.io](https://prose.io){: target="blank"}
 
+<br>
+
 Click the button "AUTHORIZE ON GITHUB" (This gives prose.io permission to access the repositories YOU have access to on GitHub)
+
+<br>
 
 Now you'll see the repositories you have access to, click on the one you wanna edit
 
-## Step 2 - Editing the content
+### Step 2 - Editing the content
+
+<hr>
 
 Inside are all the pages and texts that you can edit
 
+<br>
+
 Choose a page, text or create one by clicking the green "New file" button at the top
+
+<br>
 
 You can now edit the text like you want.
 The basic rules in markdown (the format you are using for editing the texts) is:
 
+<br>
+
 - Headlines are defined by `#` like this
+
+<br>
+
 # #Headline 1
 ## ##Headline 2
 ### ###Headline 3
@@ -46,19 +69,30 @@ The basic rules in markdown (the format you are using for editing the texts) is:
 
 Prose also have a toolbox at the top of the text editor you can use for uploading images and so on...
 
+<br>
+
 You can preview your text by clicking the eye on the right.
 
-There might be some other features in the specific page/text that you can edit, try clicking the metadata button to the right (the lines)
-If the page/text have some special values you can edit them her, like order, description, author, if it is featured and so on..
+<br>
+
+There might be some other features in the specific page/text that you can edit, try clicking the metadata button to the right (the lines) If the page/text have some special values you can edit them her, like order, description, author, if it is featured and so on..
+
+<br>
 
 When you are done, click they grey DONE button
 
-## Step 3 - Saving the content
+### Step 3 - Saving the content
+
+<hr>
 
 When everything is like you want, you can click on the save icon to the right. It'll show you all the changes that have been made before it saves it.
 
+<br>
+
 In the box to the right you should write short about what you have changed.
+
+<br>
 
 Then you click COMMIT
 
-#### There you go! Your content should be on the way to the website!
+### There you go! Your content should be on the way to the website!
