--- a/_posts/2019-11-06-propay.md
+++ b/_posts/2019-11-06-propay.md
@@ -1,13 +1,11 @@
 ---
 title: ProPay
-author: Louise
+author: Louise Nielsen
 tags: [software, products, reepay]
 image: /images/stories/propay.jpg
 published: true
-description: Bliv ProVoice for ProPay
+description: Want your customers to access their own subscriptions? Provoice has arrived
 ---
-
-# ProPay
 
 Er du kunde hos Reepay? Og har du et ønske om, at dine brugere selv kan tilgå sine abonnementer?
 
@@ -15,44 +13,67 @@ Så læs videre her ...
 
 ### Bliv ProVoice for ProPay
 
-Som ProVoice kunde tror du på, at ProPay vil imødekomme dit ønske om et brugerstyringspanel, som dine Reepay brugere kan få adgang til.     
+<hr>
+
+Som ProVoice kunde tror du på, at ProPay vil imødekomme dit ønske om et brugerstyringspanel, som dine Reepay brugere kan få adgang til.
+
+<br>
+
 ProPay panelet vil gøre det muligt for dine brugere at adminstere sit Reepay abonnement. Brugerne vil kunne tilgå ProPay via et login, som sikkert er hosted på din egen webside.
 
+<br>
+
 Som ProVoice kunde får du en stemme og muligheden for, at definere hvilke features ProPay skal indeholde, samt prioritingen af dem.   
+
+<br>
+
 Du vil blive en del af et community, som sammen bestræber sig på, at løfte produktet derhen, hvor det skaber værdi for dig og dine brugere. Du vil blive den første til at se og teste nye features, samt få muligheden for at ønske om forbedringer og rettelser herom.
 
 ### Build - Measure - Learn 
+
+<hr>
+
 "Feedback" er et af de vigtigeste nøgleord i udviklingsprocessen.
 Ved løbende feedback sikrer vi, at vi skaber et produkt, som giver værdi for dig og dine brugere.
 Vi arbejder ud fra at skaffe solid målbar viden om dine og vores antagelser om produktet. Derfor skal vi bruge målinger af dine brugeres respons på produktets løbende fremdrift, ligesåvel som din.
 
+<br>
+
 Som ProPay kunde forventer vi derfor, at du løbende giver feedback på produktet. Ikke blot som observatør, men som aktiv deltager i produktudviklingen - det er nemlig nøglen til success.
 
-#### Continuous Delivery - mikro-leverancer
+### Continuous Delivery - mikro-leverancer
+
+<hr>
 
 Vi arbejder med Continous Delivery, som er et koncept hvor vi leverer projektets features i en lean strøm.
 Features leveres i mikro-leverancer, hvis cyklus er kort: vi antager, vi bygger, vi modtager feedback, vi måler og lærer og bygger igen. 
 Dine brugeres feedback på disse mikro-leverencer er også nøglen til success.
 
-
 ### One off!
 
-Når produktet kommer i produktion, vil det være muligt for andre Reepay kunder at tilkøbe sig ProPay i form af et abonnement.    
+<hr>
+
+Når produktet kommer i produktion, vil det være muligt for andre Reepay kunder at tilkøbe sig ProPay i form af et abonnement.   
+
+<br>
+
 Som ProPay ProVoice kunde får du den enestående mulighed for at få et gratis ProPay abonnement.
 
-
-                 
 ### Bliv ProVoice kunde nu for kun et engangsbeløb på 4.995 kr.
+
+<hr>
 
 Der er ingen deadline for hvornår produktet er færdigt. 
 Feedback er fodder på vores fodderbræt, og vi spiser af det så længe der er crowdfunding og visoner for produktet.
 
+<br>
+
 Er du interesseret, kan du blive en af vores crowdfunding. Et deltagelsesprogram og en samling af interresanter, som gerne vil have en stemme og som gerne vil være med til at "udvikle" ProPay.
 
-#### Questionare
+### Questionare
+
+<hr>
 
 Gå ind på [linket](/propay-form/) og stem på hvilke features der er relavante og værdifulde for dig og dine brugere.
 
-<hr>
 ProPay udvikles af [Prolike](https://www.prolike.io/).
-<hr>
