--- a/_posts/2019-10-21-website.md
+++ b/_posts/2019-10-21-website.md
@@ -4,35 +4,47 @@ author: Carolineolivia
 tags: [products, services, html, css, jekyll]
 image: /images/stories/website.jpg
 published: true
-description: We offer websites for 5.000 kr.
+description: Need a simple, tailormade website without breaking the bank? We got you covered!
 icon: fas fa-hashtag
 ---
 
 As something new, Prolike now provides template websites for 5000 DKK a piece.
 
-## What does this offer include?
+### What does this offer include?
+
+<hr>
 
 Well, let me take you through a journy of our website standards.
 
 ### Jekyll - static websites
 
+<hr>
+
 We'll be making the website with [Jekyll](https://jekyllrb.com). Jekyll is a simple, expandable, static site generator. We use [Markdown](https://www.markdownguide.org/) to write all text material for your website. Then Jekyll will proceed to render your text in to a beautiful website. Throughout this process you can tweak how you want the site URLs to look, what data gets displayed in the layout, and much much more.
 
 ![Website](/images/stories/jekyll-og.png "Our 5k website"){:.img-fluid}
 
-#### Collections - no database
+### Collections - no database
+
+<hr>
 
 Instead of a database, Jekyll has collections, which contains a text file (Markdown), that gets rendered to a HTML page. A collection could be products, blog posts, courses and so on. This specific website deal contains only one collection.
 
-#### Prose.io - Editing your content
+### Prose.io - Editing your content
+
+<hr>
 
 The deal includes Prose.io! A user friendly interface for editing your content (Markdown files) on your website. This will make it easier to update your website exactly like you want. We already have a [guide](/anything/use-prose/) showing you how to use it. We will ensure that you can edit as much text and content as possible, so you can start edit as soon the website is done. When you are done editing, we'll push the button and your website will be online!
 
-#### Design - Choose a Jekyll template
+### Design - Choose a Jekyll template
+
+<hr>
 
 When it comes to design - we'll make it easy for you. A thousand of templates is lying, ready on the web for you to choose one. See some of the templates [here](https://jekyllthemes.io/).
 
 ### Size - how many pages will i get?
+
+<hr>
 
 Included in our deal, you'll get two pages besides the page of your collection and your frontpage.
 
@@ -40,9 +52,13 @@ Included in our deal, you'll get two pages besides the page of your collection a
 
 ### Full responsiveness!
 
+<hr>
+
 Of course your website will be fully responsive, so it is compatible on ALL devices!
 
 ### Hosting - Github pages
+
+<hr>
 
 With Jekyll and Github pages you don't even need a server to host your website, or a traditional web hotel. You just let us host your website on our Github **FOR FREE!** No monthly payment for some big corporation to let you have your site on some server.
 
@@ -50,9 +66,15 @@ With Jekyll and Github pages you don't even need a server to host your website, 
 
 ### "Okay, that's fine, but i want a big, goldplated website!" - You might say!
 
+<hr>
+
 But hold on. Our deal also contains what we call a **MVP - Minimum Viable Product**.
 Minimum Viable Product (MVP) is the absolutly neccesary for your website to run. Our goal is to get you online as fast as possible. And after the first release of your piece of software, we can begin to see how the world repsonds to your website. We will use that information to develop and improve your website for our next delivery. So don't worry, you'll get your features, pages and gold, on the next part of your website journy.
 
+<br>
+
 [Learn more about the workflow!](/flow/)
+
+<br>
 
 Wanna be our next costumer? [Contact us](/callme/) or even better, fill out [this form](/website-form/) to let us know a little bit about you and your website needs.
