close #355 create link component for posts

--- a/_posts/2019-10-21-website.md
+++ b/_posts/2019-10-21-website.md
@@ -1,7 +1,7 @@
 ---
 title: Website
 author: Carolineolivia
-tags: [products, services, html, css, jekyll]
+tags: [products, services, jekyll]
 image: /images/stories/website.jpg
 published: true
 description: Need a simple, tailormade website without breaking the bank? We got you covered!
