close #358 rewrite the website blogpost

--- a/_posts/2019-10-21-website.md
+++ b/_posts/2019-10-21-website.md
@@ -1,20 +1,23 @@
 ---
-title: Website
+title: Get a JAM-stack website
 author: Carolineolivia
 tags: [products, services, jekyll]
 image: /images/stories/website.jpg
 published: true
-description: Need a simple, tailormade website without breaking the bank? We got you covered!
+description: The future of website is here!
 icon: fas fa-hashtag
 ---
 
-As something new, Prolike now provides template websites for 5000 DKK a piece.
+Do you already have a website or do you want one?
 
-### What does this offer include?
+### Welcome to the future of websites!
+
+When we make a website we use a so called JAM-stack. If you wanna know why you should use a JAM-stack instead of everything else, click [here](/anything/we-re-jammin/).
+
 
 <hr>
 
-Well, let me take you through a journy of our website standards.
+Well, let me take you through a journy of how our websites are made.
 
 ### Jekyll - static websites
 
@@ -22,7 +25,7 @@ Well, let me take you through a journy of our website standards.
 
 We'll be making the website with [Jekyll](https://jekyllrb.com). Jekyll is a simple, expandable, static site generator. We use [Markdown](https://www.markdownguide.org/) to write all text material for your website. Then Jekyll will proceed to render your text in to a beautiful website. Throughout this process you can tweak how you want the site URLs to look, what data gets displayed in the layout, and much much more.
 
-![Website](/images/stories/jekyll-og.png "Our 5k website"){:.img-fluid}
+![Website](/images/stories/jekyll-og.png "Jekyll"){:.img-fluid}
 
 ### Collections - no database
 
@@ -48,7 +51,7 @@ When it comes to design - we'll make it easy for you. A thousand of templates is
 
 Included in our deal, you'll get two pages besides the page of your collection and your frontpage.
 
-![Website](/images/stories/info-graphic-website.png "Our 5k website"){:.img-fluid}
+![Website](/images/stories/info-graphic-website.png "Our website flow"){:.img-fluid}
 
 ### Full responsiveness!
 
@@ -62,7 +65,7 @@ Of course your website will be fully responsive, so it is compatible on ALL devi
 
 With Jekyll and Github pages you don't even need a server to host your website, or a traditional web hotel. You just let us host your website on our Github **FOR FREE!** No monthly payment for some big corporation to let you have your site on some server.
 
-![Website](/images/stories/jekyll_ghpages.png "Our 5k website"){:.img-fluid}
+![Website](/images/stories/jekyll_ghpages.png "Jekyll + GHpages"){:.img-fluid}
 
 ### "Okay, that's fine, but i want a big, goldplated website!" - You might say!
 
