close #382 make min height on events page 100vh

--- a/_posts/2019-10-21-software.md
+++ b/_posts/2019-10-21-software.md
@@ -6,6 +6,7 @@ description: Owning a piece of software is a must in todays day and age - get st
 author: Carolineolivia
 published: true
 icon: fas fa-cogs
+service: Software
 ---
 
 ### Wanna become a software owner?
