--- a/_posts/2019-11-06-propay.md
+++ b/_posts/2019-11-06-propay.md
@@ -5,6 +5,7 @@ tags: [software, products, reepay]
 image: /images/stories/propay.jpg
 published: true
 description: Want your customers to access their own subscriptions? Provoice has arrived
+service: Propay
 ---
 
 Er du kunde hos Reepay? Og har du et ønske om, at dine brugere selv kan tilgå sine abonnementer?
