close #434 update the text for links used via markdown

--- a/_posts/2019-10-07-use-prose.md
+++ b/_posts/2019-10-07-use-prose.md
@@ -21,8 +21,8 @@ Preparing:
 
 <br>
 
-- Make shure you have a github account (If not you can get one [here](https://github.com/join?source=header-home){: target="blank"} )
-- Make shure your Github account have access to the jekyll site you want to edit (You don't need access if the site is on your github account, else contact the site repository owners)
+- Make sure you have a Github account ( If not you can create a [Github account here](https://github.com/join?source=header-home){: target="blank"} )
+- Make sure your Github account have access to the Jekyll site you want to edit (You don't need access if the site is on your github account, else contact the site repository owners)
 
 ### Step 1 - Logging into Prose.io
 
