close #450 bl kvard

--- a/_posts/2019-03-18-zenhub.md
+++ b/_posts/2019-03-18-zenhub.md
@@ -1,10 +1,11 @@
 ---
-title: Zenhub
-author: Lakruzz
+title: Switching to Zenhub
+author: Lars Kruse
+author-github: https://github.com/lakruzz
 image: /images/stories/zenhub.jpg
 published: true
 tags: [github, migrate]
-description: Oh no! Waffle.io is shutting down, so we're moving to ZenHub.
+description: Oh no! Waffle.io is shutting down, so we're going to be moving to ZenHub instead
 ---
 
 Waffle.io is shutting down, we're moving to ZenHub. Zenhub has the advantage that's is a GitHub extension, so from a usability point of view it's much better integrated in the user interface.
