--- a/_posts/2019-10-07-use-prose.md
+++ b/_posts/2019-10-07-use-prose.md
@@ -1,6 +1,7 @@
 ---
 title: The use of Prose
-author: Carolineolivia
+author: Caroline Olivia
+author-github: https://github.com/carolineolivia
 tags: [github, prose.io, jekyll]
 image: /images/stories/prose.png
 published: true
