--- a/_posts/2019-10-21-software.md
+++ b/_posts/2019-10-21-software.md
@@ -3,7 +3,8 @@ title: Software
 image: /images/stories/software.jpg
 tags: [software, services, products]
 description: Owning a piece of software is a must in todays day and age - get started with us!
-author: Carolineolivia
+author: Caroline Olivia
+author-github: https://github.com/carolineolivia
 published: true
 icon: fas fa-cogs
 service: Software
