--- a/_posts/2019-11-06-propay.md
+++ b/_posts/2019-11-06-propay.md
@@ -1,6 +1,7 @@
 ---
-title: ProPay
+title: Introducing ProPay
 author: Louise Nielsen
+author-github: https://github.com/LouBNielsen
 tags: [software, products, reepay]
 image: /images/stories/propay.jpg
 published: true
