close #442 add services page back into the menu

--- a/_posts/2019-03-18-zenhub.md
+++ b/_posts/2019-03-18-zenhub.md
@@ -2,7 +2,7 @@
 title: Switching to Zenhub
 author: Lars Kruse
 author-github: https://github.com/lakruzz
-image: /images/stories/zenhub.jpg
+image: /images/anything/zenhub.jpg
 published: true
 tags: [github, migrate]
 description: Oh no! Waffle.io is shutting down, so we're going to be moving to ZenHub instead
