--- a/_posts/2019-10-07-use-prose.md
+++ b/_posts/2019-10-07-use-prose.md
@@ -3,7 +3,7 @@ title: The use of Prose
 author: Caroline Olivia
 author-github: https://github.com/carolineolivia
 tags: [github, prose.io, jekyll]
-image: /images/stories/prose.png
+image: /images/anything/prose.png
 published: true
 description: Looking for a intuitive way to edit content on your website without being a developer?
 ---
