--- a/_posts/2019-11-06-propay.md
+++ b/_posts/2019-11-06-propay.md
@@ -3,7 +3,7 @@ title: Introducing ProPay
 author: Louise Nielsen
 author-github: https://github.com/LouBNielsen
 tags: [software, products, reepay]
-image: /images/stories/propay.jpg
+image: /images/anything/propay.jpg
 published: true
 description: Want your customers to access their own subscriptions? Provoice has arrived
 service: Propay
